Fixed comments, added more integration tests, added module for filling database with test entities.